clusters/monitor/ingress-flagger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: flagger
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: flaggerloadtester.svc-dev.ink
    http:
      paths:
      - backend:
          service:
            name: flagger-loadtester
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - flaggerloadtester.svc-dev.ink
    secretName: obs-tls
